include footprint table

--- a/AlphaAlgorithm.ipynb
+++ b/AlphaAlgorithm.ipynb
@@ -274,6 +274,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Footprint table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pm4py.visualization.footprints import visualizer as fp_visualizer\n",
+    "gviz = fp_visualizer.apply(fp_log)\n",
+    "fp_visualizer.view(gviz)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Directly-follows graph"
    ]
   },
